src/gui/itemmodels/qfilesystemmodel_p.h
@@ -84,7 +84,7 @@ public:
 
         inline qint64 size() const { if (info && !info->isDir()) return info->size(); return 0; }
         inline QString type() const { if (info) return info->displayType; return QLatin1StringView(""); }
-        inline QDateTime lastModified() const { if (info) return info->lastModified(); return QDateTime(); }
+        inline QDateTime lastModified(const QTimeZone &tz) const { return info ? info->lastModified(tz) : QDateTime(); }
         inline QFile::Permissions permissions() const { if (info) return info->permissions(); return { }; }
         inline bool isReadable() const { return ((permissions() & QFile::ReadUser) != 0); }
         inline bool isWritable() const { return ((permissions() & QFile::WriteUser) != 0); }
